# EDAF50

./: .gitignore  CMakeLists.txt
Exercises/exercise1/: Makefile  date.cc  palindrome.cc  palindrome.d
Labs/lab1/: ._BetterMakefile  Makefile  coding.cpp  coding.d  coding.h  decode.cpp  decode.d  encode.cpp  encode.d  hello.cc  hello.cpp  list.cc  lol.txt.enc  ltest.cc
Labs/lab2/: CMakeLists.txt  Makefile  computedWords.txt  dictionary.cc  dictionary.h  newTest  readWords.cpp  reader.cpp  reader.d  spell.cc  testDict.cpp  testDict.d  word.cc  word.h
Labs/lab3/: Makefile  date.cc  date.h  date_test.cc  html_strip.cc  html_strip.d  primes.cc  string_cast.cc  string_cast.d  string_cast.h  stringtest.cc  stringtest.d  strippedHtml  strippedHtml.txt  toString.cc  toString.d  toString.h  toString_test.cc  toString_test.d
Labs/lab4/bitset/: Makefile  bitreference.cc  bitset.cc  bitset.h  bitsetiterator.h  bitsettest2.d
Labs/lab4/nameserver/: HNS.cc  HNS.d  HNS.h  MNS.cc  MNS.d  MNS.h  Makefile  UMNS.cc  UMNS.d  UMNS.h  VNS.cc  VNS.h  nstest.cc  nstest.exe.stackdump
