cmake_minimum_required(VERSION 3.9)
project(EDAF50)

set(CMAKE_CXX_STANDARD 11)

add_executable(EDAF50
        Exercises/exercise1/date.cc
        Exercises/exercise1/date.h
        Exercises/exercise1/datetest.cc
        Exercises/exercise1/palindrome.cc
        Exercises/exercise1/point.cc
        Exercises/exercise1/point.h
        Exercises/exercise1/pointtest.cc
        Exercises/exercise1/sizetest.cc
        Exercises/exercise2/editor.cc
        Exercises/exercise2/editor.h
        Exercises/exercise2/editortest.cc
        Exercises/exercise2/memerrortest.cc
        Exercises/exercise2/morsecode.cc
        Exercises/exercise2/morsecode.h
        Exercises/exercise2/morsetest.cc
        Exercises/exercise3/bitbuffer.cc
        Exercises/exercise3/bitbuffer.h
        Exercises/exercise3/bitbuffertest.cc
        Exercises/exercise3/countobj.cc
        Exercises/exercise3/crypto.cc
        Exercises/exercise3/crypto.h
        Exercises/exercise3/cryptotest.cc
        Exercises/exercise3/svector.cc
        Exercises/exercise3/svector.h
        Exercises/exercise3/svectortest.cc
        Exercises/exercise4/circle.h
        Exercises/exercise4/rationaltest.cc
        Exercises/exercise4/shape.h
        Exercises/exercise4/shapetest.cc
        Exercises/exercise4/shapevectortest.cc
        Exercises/exercise4/square.h
        Exercises/exercise5/avtest.cc
        Exercises/exercise5/person.cc
        Exercises/exercise5/person.h
        Exercises/exercise5/personsorttest.cc
        Exercises/exercise5/sortwords.cc
        Exercises/exercise5/text.h
        Exercises/exercise5/texttest.cc
        Exercises/exercise6/csorttest.cc
        Exercises/exercise6/generate.cc
        Exercises/sol-exercise1/date.cc
        Exercises/sol-exercise1/date.h
        Exercises/sol-exercise1/datetest.cc
        Exercises/sol-exercise1/palindrometest.cc
        Exercises/sol-exercise1/point.cc
        Exercises/sol-exercise1/point.h
        Exercises/sol-exercise1/pointtest.cc
        Exercises/sol-exercise1/sizetest.cc
        Exercises/sol-exercise2/editor.cc
        Exercises/sol-exercise2/editor.h
        Exercises/sol-exercise2/editortest.cc
        Exercises/sol-exercise2/memerrortest.cc
        Exercises/sol-exercise2/morsecode.cc
        Exercises/sol-exercise2/morsecode.h
        Exercises/sol-exercise2/morsetest.cc
        Exercises/sol-exercise3/bitbuffer.cc
        Exercises/sol-exercise3/bitbuffer.h
        Exercises/sol-exercise3/bitbuffertest.cc
        Exercises/sol-exercise3/countobj.cc
        Exercises/sol-exercise3/crypto.cc
        Exercises/sol-exercise3/crypto.h
        Exercises/sol-exercise3/cryptotest.cc
        Exercises/sol-exercise3/svector.cc
        Exercises/sol-exercise3/svector.h
        Exercises/sol-exercise3/svectortest.cc
        Exercises/sol-exercise4/circle.h
        Exercises/sol-exercise4/rational.cc
        Exercises/sol-exercise4/rational.h
        Exercises/sol-exercise4/rationaltest.cc
        Exercises/sol-exercise4/shape.h
        Exercises/sol-exercise4/shapetest.cc
        Exercises/sol-exercise4/shapevectortest.cc
        Exercises/sol-exercise4/square.h
        Exercises/sol-exercise5/av.h
        Exercises/sol-exercise5/avtest.cc
        Exercises/sol-exercise5/person.cc
        Exercises/sol-exercise5/person.h
        Exercises/sol-exercise5/personsorttest.cc
        Exercises/sol-exercise5/sortwords.cc
        Exercises/sol-exercise5/text.h
        Exercises/sol-exercise5/textiterator.h
        Exercises/sol-exercise5/texttest.cc
        Exercises/sol-exercise6/countwords.cc
        Exercises/sol-exercise6/csorttest.cc
        Exercises/sol-exercise6/generate.cc
        Labs/lab1/list.cc
        Labs/lab1/list.h
        Labs/lab1/ltest.cc
        Labs/lab1/print_argv.cc
        Labs/lab1/test_coding.cc Labs/lab1/hello.cpp Labs/lab1/coding.h Labs/lab1/coding.cpp Labs/lab1/encode.cpp Labs/lab1/decode.cpp Labs/lab2/reader.cpp)
